@@ -5,6 +5,7 @@ Revision history for perl distribution Mojo-Server-DaemonControl
  - Changed from using "reuse" to passing on "fd" to worker
  - Heartbeat messages goes through a file descriptior instead of "worker_pipe"
  - Removed worker_pipe() attribute
+ - Removed support for environment variables
 
 0.03 2022-03-28T13:35:55+0900
  - Add support for config from environment variables
